--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🚦 AI Street Lamp Control System (Ultra Compact)</h1>
+            <h1> HELIOX - AI Street Lamp Control System </h1>
             <p>Real-time monitoring and intelligent decision making</p>
         </div>
 
@@ -820,4 +820,5 @@
     </script>
 </body>
 </html>
+
 
